# btcfloor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_NOTES.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  refresh-site.yml
config/: price_fixes.csv
docs/: disclaimer.md  github_pages_refresh_plan.md  methodology.md  usage.md
resources/legacy/: lbma_gold_pm.csv  lbma_silver.csv
scripts/: build_btc_gold_dashboard.py  build_interactive_dashboards.py  build_metals_dashboard.py  build_pipeline_health_dashboard.py  build_static_site.py  plot_checkonchain_cohorts.py  plot_cycle_cloud_decision.py  plot_cycle_floor_comparison.py  plot_floor_convergence_decision.py  plot_forward_floor_decision.py  plot_sma_channel_decision.py  plot_tactical_trigger_strip.py  update_daily.py
src/btcfloor/: __init__.py  analysis.py  cli.py  cycle.py  dashboard_common.py  data.py  expectile.py  forward_floor.py  interactive.py  paths.py  powerlaw.py  risk.py  stability.py  validation.py
tests/: test_btc_gold_dashboard.py  test_cli.py  test_dashboard_labels.py  test_dashboard_nav.py  test_metals_dashboard.py  test_models.py  test_pipeline_health.py  test_static_site.py
